# synthamajig

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING.txt  README.md  flash.sh  make.sh  pico_extras_import.cmake  rebuild.sh  serterm.py
assets/: asset_generate.py  asset_list.txt  convert.py  font_config.py  font_generate.py  license.txt
sim/: .gitignore  CMakeLists.txt  cmake_install.cmake  main.cpp  sim_gfx.c  sim_hw.c  sim_perf.c
src/: audio.cpp  audio.hpp  common.h  config.h  debug_shell.c  debug_shell.h  input.c  input.h  instrument.cpp  instrument.hpp  keyboard.c  keyboard.h  main.c  main.cpp  mtp_fs_example.c  sample.cpp  sample.hpp  synth_common.c  synth_common.cpp  synth_common.h  synth_common.hpp  track.cpp  track.hpp  ui.cpp  ui.hpp  userinterface.cpp  userinterface.hpp
src/assets/: assets.c  assets.h
src/gfx/: font.h  gfx.h  gfx_ext.c  gfx_ext.h  kmgui.c  kmgui.h  ngl.c  ngl.h  widlib.c  widlib.h
src/hw/: audio.h  codec.c  codec.h  disk.c  disk.h  hw.c  hw.h  mass_storage.c  oled.c  oled.h  perf.c  perf.h  pinmap.h  print_exception.c  psram_spi.c  psram_spi.h  psram_spi.pio  quadrature_encoder.pio  sdcard_config.c  tusb_config.h  usb_descriptors.c
